<resources>
    <string name="app_name">UsersApp</string>
    <string name="add_user">Add User</string>
    <string name="select_image">Select Image</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="add_user_details">Add User Details</string>
    <string name="user_image">user image</string>
    <string name="update_user_details">Update User Details</string>
    <string name="update_user">Update User</string>
    <string name="update_image">Update image</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="delete_message">Are you sure you want to delete this user?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_updated_successfully">User updated successfully</string>
    <string name="user_added_successfully">User added successfully</string>
    <string name="user_name">User Name</string>
    <string name="users_app">Users App</string>
    <string name="user_list_screen">User List Screen</string>
    <string name="manage_and_view_your_users_effortlessly">Manage and view your users effortlessly</string>
</resources>